Responsive-related spacing/layout tweaks. Fix table display in grid.

--- a/index.scss
+++ b/index.scss
@@ -156,7 +156,7 @@ body {
 
       .feature {
         @include span-columns(4);
-        @include breakpoint($mobile) {
+        @include media($mobile) {
           @include span-columns(10);
           @include shift(1);
         }
@@ -220,19 +220,21 @@ body {
       }
 
       .screenshot {
+        margin-top: 65px;
         @include span-columns(4);
         @include shift(1);
 
-        @include breakpoint($small-desktop) {
+        @include media($small-desktop) {
           @include span-columns(6);
           @include shift(3);
+          margin-top: 0;
         }
 
-        @include breakpoint($mobile) {
+        @include media($mobile) {
           @include span-columns(10);
           @include shift(1);
+          margin-top: 0;
         }
-        margin-top: 20px;
         border: 6px solid white;
         box-shadow: 0 0 0 1px #ccc, 0 0 4px #aaa;
 
@@ -246,18 +248,37 @@ body {
         @include span-columns(4);
         @include shift(2);
 
-        @include breakpoint($small-desktop) {
+        @include media($small-desktop) {
           @include span-columns(6);
           @include shift(3);
           margin-top: 40px;
+          display: table;
         }
 
-        @include breakpoint($mobile) {
+        @include media($mobile) {
           @include span-columns(10);
           @include shift(1);
           margin-top: 40px;
+          display: table;
         }
+
+        display: table;
         margin-bottom: 50px;
+        border: 1px solid #ccc;
+        border-radius: 6px;
+        font-size: 14px;
+        box-shadow: 0 0 4px #ddd;
+
+        th:first-child, td:first-child {
+          width: 100px;
+          border-right: 1px solid #ccc;
+        }
+
+        th {
+          text-align: center;
+          background-color: #fafafa;
+          border-bottom-color: #e6e6e6;
+        }
 
         // Animation-related styles.
         opacity: 0;
@@ -273,24 +294,6 @@ body {
         opacity: 0;
         position: relative;
       }
-    }
-  }
-
-  table {
-    border: 1px solid #ccc;
-    border-radius: 6px;
-    font-size: 14px;
-    box-shadow: 0 0 4px #ddd;
-
-    th:first-child, td:first-child {
-      width: 100px;
-      border-right: 1px solid #ccc;
-    }
-
-    th {
-      text-align: center;
-      background-color: #fafafa;
-      border-bottom-color: #e6e6e6;
     }
   }
 
